<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">SugaDroid</string>

	<!-- Activity titles -->
	<string name="activity_contact_list">SugaDroid, contacts list</string>
	<string name="activity_account_list">SugaDroid, accounts list</string>
	<string name="activity_contact_details">SugaDroid, contact details
	</string>
	<string name="activity_account_details">SugaDroid, account details
	</string>
	<string name="activity_appointment_details">SugaDroid, appointment details
	</string>
	<string name="activity_appointments">SugaDroid, my appointments</string>
	<string name="activity_connection_settings">SugaDroid, connection settings</string>
	<string name="activity_general_settings">SugaDroid, general settings</string>

	<!-- pop-up windows -->
	<string name="error_launch_task_title">The task could not be executed</string>
	<string name="error_launch_task_message">A weird error occurred</string>
	
	<string name="error_login_failed_title">Login attempt failed</string>
	<string name="error_login_failed_message">Please check the username and password in the
		connection settings.</string>
		
	<string name="invalid_response_title">Invalid server response</string>
	<string name="invalid_response_message">The server response is not valid. Did you write the good URL? You might find more information in the application logs.</string>	
	
	<string name="day_not_loaded_title">Day not loaded</string>
	<string name="day_not_loaded_message">This day has not been loaded yet (feature not available yet)</string>
	
	<string name="contact_added_title">Contact added</string>
	<string name="contact_added_message">This contact has been successfully added</string>
	
	<string name="error_ok_button">OK</string>

	<!-- Menu buttons -->
	<string name="settings_label">General settings</string>
	<string name="settings_shortcut">s</string>
	
	<string name="connection_settings_label">Connection settings</string>
	<string name="connection_settings_shortcut">c</string>
	
	<string name="back_to_menu_label">Back to menu</string>
	<string name="back_to_menu_shortcut">m</string>
	
	<string name="about_title">About</string>
	<string name="about_text">\
SugaDroid is a prototype to show how to use SugarCRM Web Services with an Android Client.
It was created by Pierre-Yves Ricau for eBusiness Information, a French company, in march 2009.
</string>
	
	<!-- Settings content -->
	<string name="username_pref_text">Username</string>
	<string name="username_pref_summary">The username you use to log in to Sugar</string>
	
	<string name="password_pref_text">Password</string>
	<string name="password_pref_summary">The password associated to your username</string>
	
	<string name="url_pref_text">Sugar URL</string>
	<string name="url_pref_summary">The SOAP URL of SugarCRM</string>

	<string name="search_max_results_pref_text">Max search results</string>
	<string name="search_max_results_pref_summary">Maximum number of results shown for each search</string>

	<string name="account_max_results_pref_text">Max account contacts</string>
	<string name="account_max_results_pref_summary">Maximum number of contacts shown for each account</string>

	<string name="gmt_pref_text">GMT</string>
	<string name="gmt_pref_summary">Enter the number of hours to add related to GMT</string>

	<string name="appointments_loading_before_pref_text">Appointments previous days</string>
	<string name="appointments_loading_before_pref_summary">Enter the number of days before today to preload for appointments</string>

	<string name="appointments_loading_after_pref_text">Appointments future days</string>
	<string name="appointments_loading_after_pref_summary">Enter the number of days after today to preload for appointments</string>

	<!-- default values for preferences -->
	<!-- The following 6 next entries does not need to be translated -->
	<string name="default_username"></string>
	<string name="default_password"></string>
	<string name="default_url">http://demo.sugarcrm.com/sugarcrm_ce/soap.php</string>
	<string name="default_search_list_max_results">10</string>
	<string name="default_account_max_results">5</string>
	<string name="default_gmt">1</string>
	<string name="default_appointments_loading_before">1</string>
	<string name="default_appointments_loading_after">7</string>

	<!-- Content of views -->
	<string name="welcome_text">Welcome !</string>
	<string name="loading_text">Loading...</string>

	<string name="contact_list_button">Search for contacts</string>
	<string name="account_list_button">Search for accounts</string>
	<string name="appointments_button">My appointments</string>
	<string name="about_button">About</string>

	<string name="item_search_hint">Enter your search</string>
	<string name="item_search_no_result">No result</string>
	<string name="item_search_more_result">&gt; Show next items</string>

	<string name="logged_in_message">Logged in</string>
	<string name="logged_out_message">Not logged in</string>
	<string name="loging_in_message">Login in...</string>
	<string name="not_logged_in_title">You are not logged in!</string>
	<string name="not_logged_in_message">To log in, please fill in your connection settings in the preferences menu.
	</string>
	
	<string name="address_button">Show on Google Maps</string>
	<string name="previous_day_button">&lt;</string>
	<string name="next_day_button">&gt;</string>
	<string name="day_date_format">MM-dd-yyyy</string>
	<string name="time_format">"HH'h'mm"</string>
	<string name="today">Today</string>

	<string name="contact_list">Contacts list</string>
	<string name="appointment_name">Topic:</string>
	<string name="appointment_date_start">Start day:</string>
	<string name="appointment_time_start">Start hour:</string>
	<string name="appointment_date_end">End day:</string>
	<string name="appointment_duration">Duration:</string>
	<string name="appointment_hours">h</string>
	<string name="not_available">Not available</string>
	
	<string name="add_contact">Add contact</string>

</resources>
